--- a/FunctionOverload/FunctionOverload.csproj
+++ b/FunctionOverload/FunctionOverload.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3D658198-12B8-49C5-94CA-60CA388E0D10}</ProjectGuid>
+    <ProjectGuid>{42BFEAA2-6346-434F-A0BD-5F885F5223C1}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Namespace</RootNamespace>
-    <AssemblyName>Namespace</AssemblyName>
+    <RootNamespace>FunctionOverload</RootNamespace>
+    <AssemblyName>FunctionOverload</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
